<resources>
    <string name="app_name">ZAD3.3</string>
    <string name="textview1">Manufacturer</string>
    <string name="textview2">Model</string>
    <string name="textView3">Android version</string>
    <string name="textview4">webpage</string>
    <string name="hint1">manu</string>
    <string name="hint2">model</string>
    <string name="hint3">android ver</string>
    <string name="hint4">web</string>
    <string name="error_word">nie działa</string>
    <string name="fabdelete">fabDelete</string>
    <string name="fabmain">fabMain</string>
    <string name="dodaj_telefon">Dodaj Telefon</string>
    <string name="recyclerViewItemModelText">model</string>
    <string name="recyclerViewItemManufacturerText">manufacturer</string>
    <string name="clear_data">Clear Data</string>
    <string name="anuluj">Anuluj</string>
    <string name="website">website</string>
</resources>